<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XHermes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">XHermes</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="saveuser">记住用户名、密码</string>
    <string name="autologin">自动登录</string>
    <string name="username_unpass">账号格式有误，请输入正确邮件地址</string>
    <string name="password_unpass">密码中含有非法字符</string>
    <string name="network_failed">网络连接异常</string>
    <string name="sign_in">用户登陆</string>
    <string name="customer">游客登陆</string>
    <string name="forget_psw_text">忘记密码？</string>
    <string name="check_failed">用户名或密码错误，请重新输入</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_alert">提示信息</string>
    <string name="menu">菜单</string>
    <string name="home">主页</string>
    <string name="carinfo">车辆信息</string>
    <string name="message">消息提醒</string>
    <string name="records">维修记录</string>
    <string name="travelinfo">行车记录</string>
    <string name="report">统计数据</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="about">关于</string>
    <string name="mail">消息</string>
    <string name="sos">紧急救援</string>
    <string name="habit">驾驶习惯</string>
    <string name="track">爱车追踪</string>
    <string name="realtimeinfo">实时车况</string>
    <string name="exm_mark_title">爱车健康评分</string>
    <string name="distance_extra_title">当日行驶里程</string>
    <string name="oil_extra_title">当日平均耗油</string>
    <string name="time_extra_title">当日驾驶时间</string>
    <string name="click_state">点击进行全车检查</string>
    <string name="click_state_english">CLICK TO START ALL CARS CHECK</string>
    <string name="check_state">正在进行全车检查</string>
    <string name="check_state_english">ALL CARS IN PROGRESS CHECKED</string>
    <string name="exam">爱车体检</string>
    <string name="exm_item_1">动力总成系统</string>
    <string name="exm_item_2">底盘系统</string>
    <string name="exm_item_3">车身系统</string>
    <string name="exm_item_4">网络通信</string>
    <string name="from_sohu_auto">图片来源：搜狐汽车</string>

    <!-- Travel info details -->
    <string name="travel_info_detail">行程详情</string>
    <string name="tr_distance">行驶距离：</string>
    <string name="tr_average_speed">平均速度：</string>
    <string name="tr_max_speed">最大速度：</string>
    <string name="tr_total_oil_consuming">总油耗：</string>
    <string name="tr_average_oil">平均油耗：</string>
    <string name="tr_fatigue_driving_time">疲劳驾驶时长：</string>
    <string name="tr_timeout_length">超时时长：</string>
    <string name="tr_brake_times">急刹车次数：</string>
    <string name="tr_urgent_brake_time">紧急刹车次数：</string>
    <string name="tr_accelerate_times">急加速次数：</string>
    <string name="tr_urgent_accelerate_times">紧急加速次数：</string>
    <string name="tr_engine_highest_rotation_speed">发动机最高转速：</string>
    <string name="tr_engine_highest_temperature">发动机最高水温：</string>
    <string name="tr_voltage">电瓶电压：</string>
    <string name="newnotification">【XHermes】新消息</string>
    <string name="newalert">【XHermes】新的警告消息</string>
    <string name="no_value">--/--</string>
    <string name="speed_dial_desc">速度仪表盘</string>
    <string name="speed_pointer_desc">速度仪表盘指针</string>
    <string name="first_view">仪表盘界面</string>
    <string name="second_view">图表界面</string>
    <string name="third_view">登陆界面</string>
    <string name="average_fuel_consumption">保养间隔</string>
    <string name="odo">当前里程</string>
    <string name="total_fuel_consumption">下次保养</string>
    <string name="average_speed">平均速度</string>
    <string name="highest_water_temperature_of_engine">发动机最高水温</string>
    <string name="voltage_dial_desc">电压仪表盘</string>
    <string name="voltage_dial_pointer_desc">电压仪表盘指针</string>
    <string name="rotate_speed_dial_desc">发动机转速仪表盘</string>
    <string name="rotate_speed_dial_pointer_desc">发动机转速仪表盘指针</string>
    <string name="temperature_dial_desc">温度仪表盘</string>
    <string name="temperature_dial_pointer_desc">温度仪表盘指针</string>
    <string name="pressure_dial_desc">气压仪表盘</string>
    <string name="pressure_dial_pointer_desc">气压仪表盘指针</string>
    <string name="voltage">电瓶电压</string>
    <string name="rotate_speed">发动机转速</string>
    <string name="temperature">冷却液温度</string>
    <string name="pressure">压力数据</string>

    <!-- system set -->
    <string name="isNoticeReceive">新消息提醒</string>
    <string name="isShock">是否开启震动</string>
    <string name="isBeep">是否开启消息提示音</string>
    <string name="pwdChange">修改密码</string>
    <string name="logout">注销登录</string>
    <string name="exit">退出XHermes</string>

    <!-- tag names -->
    <string name="tag_name_distance">里程</string>
    <string name="tag_name_fuel">油耗</string>
    <string name="tag_name_brake">刹车</string>
    <string name="tag_name_speedup">加速</string>
    <string name="tag_name_drivingtime">驾驶时间</string>
    <string name="tag_name_avgfuel">百公里油耗</string>
    <string name="tag_name_avgspeed">平均速度</string>

    <!-- habit names -->
    <string name="habit_name_1">总距离（km）</string>
    <string name="habit_name_2">最大距离（km）</string>
    <string name="habit_name_3">最大速度（km/h）</string>
    <string name="habit_name_4">总超时时长（分钟）</string>
    <string name="habit_name_5">总急刹车次数</string>
    <string name="habit_name_6">总紧急刹车次数</string>
    <string name="habit_name_7">总急加速次数</string>
    <string name="habit_name_8">总紧急加速次数</string>
    <string name="habit_name_9">平均速度（km/h）</string>
    <string name="habit_name_10">发动机最高水温（摄氏度）</string>
    <string name="habit_name_11">发动机最高转速</string>
    <string name="habit_name_12">总油耗（升）</string>
    <string name="habit_name_13">平均油耗（百公里升）</string>
    <string name="habit_name_14">总疲劳驾驶时间（分钟）</string>
    <string name="habit_name_15">总驾驶时间（分钟）</string>

    <!-- habit title -->
    <string name="habit_graph_time">驾车时间/时钟曲线</string>
    <string name="habit_graph_speedtime">驾车速度/时钟曲线</string>
    <string name="axis_y1">驾车时间(min)</string>
    <string name="axis_y2">速度(km/h))</string>
    <string name="axis_x">时钟</string>

    <!-- pwd change -->
    <string name="oldpwd">当前密码:</string>
    <string name="newpwd">新密码:</string>
    <string name="newpwd_check">确认密码:</string>
    <string name="oldpwd_edittext">请输入当前密码</string>
    <string name="newpwd_edittext">请输入新密码</string>
    <string name="newpwd_check_edittext">请再次输入新密码</string>
    <string name="pwdChange_confirm">确认</string>

    <!-- msg -->
    <string name="unread_message">未读消息</string>
    <string name="all_message">全部消息</string>
    <string name="vipSOS">加盟店救援</string>

</resources>