<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mail"
        android:icon="@drawable/mail_icon"
        android:showAsAction="always"
        android:title="@string/mail"
        android:titleCondensed="@string/mail">
    </item>
    <item
        android:id="@+id/sos"
        android:icon="@drawable/sos_m_icon"
        android:showAsAction="always"
        android:title="@string/sos"
        android:titleCondensed="@string/sos">
        <menu>
            <item
                android:id="@+id/emergencySOS"
                android:actionLayout="@layout/menu_item"
                android:showAsAction="always|withText"
                android:title="@string/sos"
                android:titleCondensed="@string/sos"/>
            <item
                android:id="@+id/vipSOS"
                android:actionLayout="@layout/menu_item"
                android:showAsAction="always|withText"
                android:title="@string/vipSOS"
                android:titleCondensed="@string/vipSOS"/>
        </menu>
    </item>

</menu>