<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/b1_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/login_img" >
    </ImageView>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_group"
        android:layout_alignLeft="@+id/buttons_group"
        android:layout_alignRight="@+id/buttons_group"
        android:layout_marginBottom="46dp"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/login_checkbox_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_group"
        android:layout_alignLeft="@+id/buttons_group" >
            <CheckBox
                android:id="@+id/saveUserCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveuser"
                android:textColor="@color/white" />
            <CheckBox
                android:id="@+id/autoLoginCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/autologin"
                android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:autoLink="web"
        android:text="@string/forget_psw_text"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/buttons_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forget_psw"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Button
            android:id="@+id/customer_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/select_main_bar"
            android:text="@string/customer"
            android:textColor="@color/apptheme_color" />

        <View
            android:id="@+id/button_divider"
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/select_main_bar"
            android:text="@string/sign_in"
            android:textColor="@color/apptheme_color" />
    </LinearLayout>

</RelativeLayout>