<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#26262A">

    <LinearLayout
        android:id="@+id/dials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dials_background"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/voltage_dial_desc"
                    android:src="@drawable/voltage_dial"/>

                <ImageView
                    android:id="@+id/voltage_dial_pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/voltage_dial_pointer_desc"
                    android:src="@drawable/voltage_dial_pointer"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/rotate_speed_dial_desc"
                    android:src="@drawable/rotate_speed_dial"/>

                <ImageView
                    android:id="@+id/rotate_speed_dial_pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/rotate_speed_dial_pointer_desc"
                    android:src="@drawable/rotate_speed_dial_pointer"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/temperature_dial_desc"
                    android:src="@drawable/temperature_dial"/>

                <ImageView
                    android:id="@+id/temperature_dial_pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/temperature_dial_pointer_desc"
                    android:src="@drawable/temperature_dial_pointer"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/pressure_dial_desc"
                    android:src="@drawable/pressure_dial"/>

                <ImageView
                    android:id="@+id/pressure_dial_pointer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/pressure_dial_pointer_desc"
                    android:src="@drawable/pressure_dial_pointer"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/voltage"
                    android:textColor="@color/main_color"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/voltage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_value"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rotate_speed"
                    android:textColor="@color/main_color"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/rotate_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_value"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/main_color"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_value"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pressure"
                    android:textColor="@color/main_color"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_value"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/black_line"
        android:layout_below="@+id/dials">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/speed_dial_desc"
            android:src="@drawable/speed_dial"/>

        <ImageView
            android:id="@+id/speed_dial_pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/speed_pointer_desc"
            android:src="@drawable/speed_pointer"/>

    </RelativeLayout>

    <View
        android:id="@+id/black_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/text_info"
        android:background="@android:color/black"/>

    <LinearLayout
        android:id="@+id/text_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:background="@drawable/text_info_background"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:background="#38482E"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="10dp"
                android:text="@string/odo"
                android:textColor="@color/main_color"
                android:textSize="17sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="2dp"
                android:background="#313D2A"/>

            <TextView
                android:id="@+id/total_distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:background="#232A20"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/no_value"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:background="#38482E"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="10dp"
                android:text="@string/average_fuel_consumption"
                android:textColor="@color/main_color"
                android:textSize="17sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#313D2A"/>

            <TextView
                android:id="@+id/average_fuel_consumption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="#232A20"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/no_value"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/average_fuel_consumption_cell"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:background="#38482E"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="10dp"
                android:text="@string/total_fuel_consumption"
                android:textColor="@color/main_color"
                android:textSize="17sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginRight="2dp"
                android:background="#313D2A"/>

            <TextView
                android:id="@+id/total_fuel_consumption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="2dp"
                android:background="#232A20"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/no_value"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"/>

</RelativeLayout>